--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "GTI\\OrganizationStructure\\": "packages/gti/organization-structure/src"
         }
     },
     "autoload-dev": {
